# COMP9315_21T1

./: .gitignore  CMakeLists.txt
Codes/: ass2.tar
Codes/A1/: intset.c  intset.source  moss  plag.c  test.sh  test.sql  trial  trial.c
Codes/A2/: R.bsig  R.psig  R.tsig  bits.c  bits.h  bsig.c  create  dump  gendata  insert  psig.c  query.c  reln.c  reln.h  select  stats  test.sh  tsig.c  tsig.h  x1  x1.c  x2  x2.c  x3
